--- a/bsmm-lab-1.qmd
+++ b/bsmm-lab-1.qmd
@@ -28,7 +28,7 @@ library(Lahman)
 dplyr::glimpse(Teams)
 ```
 
-The `Teams` dataset has \_\_\_ observations and \_\_\_ variables.
+The `Teams` dataset has 3015 observations and 48 variables.
 
 ### Exercise 2
 
