--- a/bsmm-lab-1.qmd
+++ b/bsmm-lab-1.qmd
@@ -32,11 +32,27 @@ The `Teams` dataset has 3015 observations and 48 variables.
 
 ### Exercise 2
 
-...
+```{r}
+head(Teams)
+```
+
+```{r}
+mets <- Teams  |> 
+  dplyr::filter(teamID == "NYN")
+my_mets <- mets |> 
+  dplyr::filter(yearID %in% 2004:2012)
+my_mets |> 
+  dplyr::select(yearID,G,W,L)
+```
 
 ### Exercise 3
 
-...
+```{r}
+mets_ben <- Teams |>
+  dplyr::select(_, _, _, _, _, _) |>
+  dplyr::filter(_ == "NYN" & _ %in% 2004:2012)
+mets_ben
+```
 
 ### Exercise 4
 
