--- a/bsmm-lab-1.qmd
+++ b/bsmm-lab-1.qmd
@@ -49,14 +49,22 @@ my_mets |>
 
 ```{r}
 mets_ben <- Teams |>
-  dplyr::select(_, _, _, _, _, _) |>
-  dplyr::filter(_ == "NYN" & _ %in% 2004:2012)
+  dplyr::select(yearID, teamID, G, RA, RS = R) |>
+  dplyr::filter(teamID == "NYN" & yearID %in% 2004:2012)
 mets_ben
 ```
 
 ### Exercise 4
 
-...
+```{r}
+mets_ben <- mets_ben |>
+  dplyr::mutate(WPct = 1 / (1+(RA/RS) * 2))
+mets_ben
+
+mets_ben <- mets_ben |>
+  dplyr::mutate(W_hat = WPct*G)
+mets_ben
+```
 
 ### Exercise 5
 
