--- a/bsmm-lab-1.qmd
+++ b/bsmm-lab-1.qmd
@@ -1,8 +1,8 @@
 ---
 title: "BSMM-lab-1"
 subtitle: "BSMM 8740 Fall 2023"
-author: "Add your name here"
-date: "Add the date here"
+author: "Shresth Bheri"
+date: "09-22-2023"
 format: html
 editor: visual
 self-contained: true
